Fixing slight width breakage on mobile

--- a/app/assets/stylesheets/business-frontpage.css.scss
+++ b/app/assets/stylesheets/business-frontpage.css.scss
@@ -229,15 +229,15 @@ h1{ font:1.9em Georgia;margin-bottom:10px }
     }
   }
   #four-col {
-    margin-left: 16px;
+    padding-left: 10px;
     a {
       display: block;
       text-align: center;
       font-size: 1.4em;
     }
     .column {
-      width: 45%;
-      margin-right: 5%;
+      width: 47%;
+      margin-right: 10px;
       margin-top: 30px;
       float: left;
       img {
